--- a/DurableFunctionExample/DurableExample/DurableExample.csproj
+++ b/DurableFunctionExample/DurableExample/DurableExample.csproj
@@ -16,4 +16,7 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="TimerToCheckIfAnyRequestsExist.cs" />
+  </ItemGroup>
 </Project>
